--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "eslint-config-next": "15.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^39.3.0"
   },
   "packageManager": "yarn@4.6.0"
 }
