--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "annotpdf": "^1.0.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "jotai": "^2.11.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
     "mupdf": "^1.1.0",
@@ -26,6 +25,7 @@
     "scribe.js-ocr": "patch:scribe.js-ocr@npm%3A0.7.0#~/.yarn/patches/scribe.js-ocr-npm-0.7.0-1ff50d17e5.patch",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "valtio": "^2.1.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
