--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.471.1",
+    "memoizee": "^0.4.17",
     "mupdf": "^1.1.0",
     "next": "15.1.4",
     "pdf-lib": "^1.17.1",
@@ -32,6 +33,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/lodash": "^4",
+    "@types/memoizee": "^0",
     "@types/node": "^20",
     "@types/pdfkit": "^0",
     "@types/react": "^19",
