feat: add a timer

--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "memoizee": "^0.4.17",
     "mupdf": "^1.1.0",
     "next": "15.1.4",
+    "ohash": "^1.1.4",
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "rxjs": "^7.8.1",
     "scribe.js-ocr": "patch:scribe.js-ocr@npm%3A0.7.0#~/.yarn/patches/scribe.js-ocr-npm-0.7.0-1ff50d17e5.patch",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
